<resources>
    <string name="app_name">BTOS</string>
    <string-array name="onboarding_agelist">
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
    </string-array>
    <string-array name="report_items">
        <item>삭제</item>
        <item>신고</item>
        <item>차단</item>
    </string-array>
    <string name="diary_contents_hint">오늘 하루는 어땠나요?</string>
    <string name="diary_public">공개</string>
    <string name="diary_private">비공개</string>
    <string name="typography">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet consectetur adipiscing elit ut aliquam purus. Feugiat vivamus at augue eget arcu dictum varius. Tincidunt vitae semper quis lectus nulla at volutpat diam. Scelerisque felis imperdiet proin fermentum leo. Nulla aliquet enim tortor at auctor. Mauris vitae ultricies leo integer malesuada nunc vel risus. Leo urna molestie at elementum eu facilisis sed odio morbi. Urna id volutpat lacus laoreet. Pretium viverra suspendisse potenti nullam ac. Arcu ac tortor dignissim convallis aenean et tortor at. Tellus id interdum velit laoreet id donec ultrices tincidunt arcu.

Amet aliquam id diam maecenas. Scelerisque varius morbi enim nunc faucibus a. Varius morbi enim nunc faucibus a pellentesque sit amet porttitor. Lorem ipsum dolor sit amet consectetur adipiscing elit. Mi proin sed libero enim sed faucibus turpis. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium. Tellus integer feugiat scelerisque varius. Odio eu feugiat pretium nibh ipsum consequat nisl. Pharetra sit amet aliquam id diam maecenas. Id consectetur purus ut faucibus pulvinar elementum integer enim. Enim tortor at auctor urna nunc id cursus. Tincidunt ornare massa eget egestas purus viverra accumsan. Blandit cursus risus at ultrices mi tempus imperdiet nulla malesuada. Sed euismod nisi porta lorem mollis aliquam ut porttitor. Lorem dolor sed viverra ipsum nunc aliquet bibendum. Sit amet volutpat consequat mauris nunc congue nisi. Et malesuada fames ac turpis egestas maecenas pharetra convallis. Nisl nunc mi ipsum faucibus vitae. In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Bibendum est ultricies integer quis auctor elit sed vulputate mi.

Sit amet volutpat consequat mauris. Semper risus in hendrerit gravida rutrum quisque non tellus orci. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Integer feugiat scelerisque varius morbi enim. Vel risus commodo viverra maecenas accumsan lacus. Enim nunc faucibus a pellentesque sit amet porttitor eget dolor. Iaculis eu non diam phasellus vestibulum. Cras pulvinar mattis nunc sed blandit. Pharetra magna ac placerat vestibulum. Venenatis lectus magna fringilla urna porttitor rhoncus. Mattis molestie a iaculis at erat pellentesque adipiscing commodo elit. Eget mi proin sed libero enim. Libero enim sed faucibus turpis in eu mi bibendum. Cras sed felis eget velit aliquet. Pharetra magna ac placerat vestibulum lectus mauris ultrices eros. Est sit amet facilisis magna etiam tempor orci eu. Cum sociis natoque penatibus et magnis dis parturient montes nascetur. Tristique et egestas quis ipsum suspendisse ultrices.

Ac turpis egestas sed tempus urna et pharetra pharetra massa. Velit ut tortor pretium viverra suspendisse. Libero nunc consequat interdum varius sit amet. Viverra mauris in aliquam sem fringilla ut morbi. Tempus urna et pharetra pharetra massa. Posuere lorem ipsum dolor sit amet. Nibh tellus molestie nunc non. Ut tortor pretium viverra suspendisse potenti nullam ac tortor. Arcu cursus vitae congue mauris rhoncus aenean. Pharetra sit amet aliquam id diam. Sed tempus urna et pharetra pharetra massa massa ultricies. Nibh mauris cursus mattis molestie.

Volutpat sed cras ornare arcu dui vivamus. Vitae turpis massa sed elementum tempus egestas sed. Laoreet suspendisse interdum consectetur libero. Eu augue ut lectus arcu bibendum at varius vel pharetra. Enim diam vulputate ut pharetra sit amet aliquam. In hendrerit gravida rutrum quisque non tellus orci ac auctor. Magna fermentum iaculis eu non diam. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis. Velit laoreet id donec ultrices tincidunt arcu non sodales. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Bibendum ut tristique et egestas quis ipsum. Faucibus vitae aliquet nec ullamcorper sit amet risus nullam eget. Egestas purus viverra accumsan in nisl nisi. Tristique senectus et netus et malesuada fames ac. Sed felis eget velit aliquet sagittis. Lobortis elementum nibh tellus molestie nunc non. Nunc sed id semper risus in. Odio morbi quis commodo odio aenean sed.</string>
    <string name="archive_list_set_period">기간설정</string>
    <string name="archive_list_period_from">부터</string>
    <string name="archive_list_period_to">까지</string>
    <string name="archive_list_period_cancel">취소</string>
    <string name="archive_list_period_submit">완료</string>
    <string name="archive_calendar_radio_done_list">DONE LIST</string>
    <string name="archive_calendar_radio_emotion">감정</string>
    <string-array name="delete_items">
    <item>삭제</item>
    </string-array>
    <string name="tutorial_finish">OKAY!</string>
    <string name="premium">저편너머 프리미엄 회원이 되시면 일기와 편지를 여러가지 정렬방식으로 필터링해 볼 수 있어요.</string>
    <string name="history_radio1">발신인</string>
    <string name="history_radio2">일기만</string>
    <string name="history_radio3">편지만</string>
    <string name="none_selected">선택안함</string>
    <string-array name="suggest_item">
        <item>카테고리1</item>
        <item>카테고리2</item>
        <item>카테고리3</item>
    </string-array>
    <string name="profile_notice">안녕하세요. 저편너머입니다 공지공지공지공지 공지공지공지공지 공지공지공지공지
        공지공지공 공지공지공지공지 공지공지공지공지 공지공지공지공지  공지공지공지공지 공지공지공지공지 공지공지공지공지 </string>
</resources>