<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/history_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        layout="@layout/toolbar_history"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_toolbar">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/history_radio1"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/history_radiobutton_selector"
            android:gravity="center"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textSize="@dimen/history_radiobutton_textSize"
            android:layout_marginEnd="13dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/history_radio2"
            android:button="@null"
            android:background="@drawable/history_radiobutton_selector"
            android:gravity="center"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textSize="@dimen/history_radiobutton_textSize"
            android:layout_marginEnd="13dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/history_radio3"
            android:button="@null"
            android:background="@drawable/history_radiobutton_selector"
            android:gravity="center"
            android:paddingStart="9dp"
            android:paddingEnd="9dp"
            android:textSize="@dimen/history_radiobutton_textSize"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>