<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/archive_list_period_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="15dp"
        android:textSize="14dp"
        android:text="@string/archive_list_set_period"
        android:fontFamily="@font/notosanskr_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/archive_list_period_start_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/archive_list_period_tv">

        <NumberPicker
            android:id="@+id/archive_list_period_start_year_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <NumberPicker
            android:id="@+id/archive_list_period_start_month_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_start_year_np"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <NumberPicker
            android:id="@+id/archive_list_period_start_day_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_start_month_np"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/archive_list_period_from"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="@dimen/archive_list_period_start"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/archive_list_period_start_day_np"
            app:layout_constraintBottom_toBottomOf="@id/archive_list_period_start_day_np"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_start_day_np"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
<!--    <DatePicker-->
<!--        android:id="@+id/archive_list_period_start_dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="95dp"-->
<!--        android:datePickerMode="spinner"-->
<!--        android:calendarViewShown="false"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/archive_list_period_tv"/>-->

<!--    <TextView-->
<!--        android:id="@+id/archive_list_period_from_tv"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/archive_list_period_from"-->
<!--        android:textSize="@dimen/archive_list_period_start"-->
<!--        android:textColor="@color/black"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:fontFamily="@font/notosanskr_bold"-->
<!--        app:layout_constraintStart_toEndOf="@id/archive_list_period_start_dp"-->
<!--        app:layout_constraintTop_toTopOf="@id/archive_list_period_start_dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/archive_list_period_start_dp"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/archive_list_period_end_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/archive_list_period_start_dp">

        <NumberPicker
            android:id="@+id/archive_list_period_end_year_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <NumberPicker
            android:id="@+id/archive_list_period_end_month_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_end_year_np"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <NumberPicker
            android:id="@+id/archive_list_period_end_day_np"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_end_month_np"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/archive_list_period_to"
            android:fontFamily="@font/notosanskr_bold"
            android:textSize="@dimen/archive_list_period_start"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="@id/archive_list_period_end_day_np"
            app:layout_constraintBottom_toBottomOf="@id/archive_list_period_end_day_np"
            app:layout_constraintStart_toEndOf="@id/archive_list_period_end_day_np"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/archive_list_period_cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_bold"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/archive_list_period_cancel"
        android:textSize="@dimen/archive_list_period_cancel"
        app:layout_constraintTop_toBottomOf="@id/archive_list_period_end_dp"
        app:layout_constraintEnd_toStartOf="@id/archive_list_period_submit_tv"/>

    <TextView
        android:id="@+id/archive_list_period_submit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/archive_list_period_submit"
        android:textSize="@dimen/archive_list_period_submit"
        android:fontFamily="@font/notosanskr_bold"
        app:layout_constraintTop_toBottomOf="@id/archive_list_period_end_dp"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>